--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
       }
     </style>
   </head>
-  <body class="dark">
+  <body class="">
+    <div class="bg-top"></div>
     <main class="container">
       <header class="flex header">
         <div>
@@ -43,7 +44,9 @@
         <div class="line"></div>
         <div class="flex dark-div">
           <p class="p-head">Dark Mode</p>
-          <button>temp</button>
+          <button id="toggle" class="bg-toggle">
+            <div id="circle" class="circle"></div>
+          </button>
         </div>
       </header>
       <section class="flex social">
@@ -76,56 +79,88 @@
         <h1 class="h1">Overview - Today</h1>
         <div class="grid grid-div">
           <div class="card card-grid">
-            <p class="p-grid">Page Views</p>
-            <img src="./images/icon-facebook.svg" alt="icon-facebook" />
-            <h1>87</h1>
-            <p>3%</p>
+            <p class="grid-left p-head">Page Views</p>
+            <img
+              class="grid-right"
+              src="./images/icon-facebook.svg"
+              alt="icon-facebook"
+            />
+            <h2 class="nbr-2 grid-left">87</h2>
+            <p class="grid-right up">3%</p>
           </div>
           <div class="card card-grid">
-            <p>Likes</p>
-            <img src="./images/icon-facebook.svg" alt="icon-facebook" />
-            <h1>52</h1>
-            <p>2%</p>
+            <p class="grid-left p-head">Likes</p>
+            <img
+              class="grid-right"
+              src="./images/icon-facebook.svg"
+              alt="icon-facebook"
+            />
+            <h2 class="nbr-2 grid-left">52</h2>
+            <p class="grid-right down">2%</p>
           </div>
           <div class="card card-grid">
-            <p>Likes</p>
-            <img src="./images/icon-instagram.svg" alt="icon-instagram" />
-            <h1>5462</h1>
-            <p>2257%</p>
+            <p class="grid-left p-head">Likes</p>
+            <img
+              class="grid-right"
+              src="./images/icon-instagram.svg"
+              alt="icon-instagram"
+            />
+            <h2 class="nbr-2 grid-left">5462</h2>
+            <p class="grid-right up">2257%</p>
           </div>
           <div class="card card-grid">
-            <p>Profile Views</p>
-            <img src="./images/icon-instagram.svg" alt="icon-instagram" />
-            <h1>52k</h1>
-            <p>1375%</p>
-          </div>
-
-          <div class="card card-grid">
-            <p>Retweets</p>
-            <img src="./images/icon-twitter.svg" alt="icon-twitter" />
-            <h1>117</h1>
-            <p>303%</p>
-          </div>
-
-          <div class="card card-grid">
-            <p>Likes</p>
-            <img src="./images/icon-twitter.svg" alt="icon-twitter" />
-            <h1>507</h1>
-            <p>553%</p>
-          </div>
-
-          <div class="card card-grid">
-            <p>Likes</p>
-            <img src="./images/icon-youtube.svg" alt="icon-youtube" />
-            <h1>107</h1>
-            <p>19%</p>
+            <p class="grid-left p-head">Profile Views</p>
+            <img
+              class="grid-right"
+              src="./images/icon-instagram.svg"
+              alt="icon-instagram"
+            />
+            <h2 class="nbr-2 grid-left">52k</h2>
+            <p class="grid-right up">1375%</p>
           </div>
 
           <div class="card card-grid">
-            <p>Total Views</p>
-            <img src="./images/icon-youtube.svg" alt="icon-youtube" />
-            <h1>1407</h1>
-            <p>12%</p>
+            <p class="grid-left p-head">Retweets</p>
+            <img
+              class="grid-right"
+              src="./images/icon-twitter.svg"
+              alt="icon-twitter"
+            />
+            <h2 class="nbr-2 grid-left">117</h2>
+            <p class="grid-right">303%</p>
+          </div>
+
+          <div class="card card-grid">
+            <p class="grid-left p-head">Likes</p>
+            <img
+              class="grid-right"
+              src="./images/icon-twitter.svg"
+              alt="icon-twitter"
+            />
+            <h2 class="nbr-2 grid-left">507</h2>
+            <p class="grid-right up">553%</p>
+          </div>
+
+          <div class="card card-grid">
+            <p class="grid-left p-head">Likes</p>
+            <img
+              class="grid-right"
+              src="./images/icon-youtube.svg"
+              alt="icon-youtube"
+            />
+            <h2 class="nbr-2 grid-left">107</h2>
+            <p class="grid-right down">19%</p>
+          </div>
+
+          <div class="card card-grid">
+            <p class="grid-left p-head">Total Views</p>
+            <img
+              class="grid-right"
+              src="./images/icon-youtube.svg"
+              alt="icon-youtube"
+            />
+            <h2 class="nbr-2 grid-left">1407</h2>
+            <p class="grid-right down">12%</p>
           </div>
         </div>
       </section>
