Fix: dark mode button no displayed at initial page state

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       }
     </style>
   </head>
-  <body class="">
+  <body class="light">
     <div class="bg-top"></div>
     <main class="container">
       <header class="flex header">
