Tweaks and tablet view

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </button>
         </div>
       </header>
-      <section class="flex social">
+      <section class="social">
         <div class="card c-fb">
           <p class="facebook">@nathanf</p>
           <h1 class="nbr">1987</h1>
