Refactored heading tags to comply with accessibility requirements

--- a/index.html
+++ b/index.html
@@ -41,35 +41,36 @@
           class="bg-toggle"
           aria-label="Theme toggle button"
         >
-          <picture id="circle" class="circle"></picture>
+          <span id="circle" class="circle"></span>
         </button>
       </div>
     </header>
     <main class="container">
       <section class="social">
+        <h2 class="sr-only">Overview - Social Stats</h2>
         <article class="card c-fb">
-          <h2 class="sr-only">Facebook Stats</h2>
+          <h3 class="sr-only">Facebook Stats</h3>
           <p class="facebook">@nathanf</p>
           <p class="nbr">1987</p>
           <p class="subs">Followers</p>
           <p class="up">12 Today</p>
         </article>
         <article class="card c-t">
-          <h2 class="sr-only">Twitter Stats</h2>
+          <h3 class="sr-only">Twitter Stats</h3>
           <p class="twitter">@nathanf</p>
           <p class="nbr">1044</p>
           <p class="subs">Followers</p>
           <p class="up">99 Today</p>
         </article>
         <article class="card c-i">
-          <h2 class="sr-only">Instagram Stats</h2>
+          <h3 class="sr-only">Instagram Stats</h3>
           <p class="instagram">@realnathanf</p>
           <p class="nbr">11k</p>
           <p class="subs">Followers</p>
           <p class="up">1099 Today</p>
         </article>
         <article class="card c-y">
-          <h2 class="sr-only">Youtube Stats</h2>
+          <h3 class="sr-only">Youtube Stats</h3>
           <p class="youtube">Nathan F.</p>
           <p class="nbr">8239</p>
           <p class="subs">Subscribers</p>
@@ -77,10 +78,10 @@
         </article>
       </section>
       <section class="stats">
-        <h1 class="h1">Overview - Today</h1>
-        <div class="grid grid-div">
-          <div class="card card-grid">
-            <h2 class="sr-only">Facebook</h2>
+        <h2 class="h1">Overview - Today</h2>
+        <article class="grid grid-div">
+          <article class="card card-grid">
+            <h3 class="sr-only">Facebook</h3>
             <p class="grid-left p-head">Page Views</p>
             <img
               class="grid-right"
@@ -89,9 +90,9 @@
             />
             <p class="nbr-2 grid-left">87</p>
             <p class="grid-right up">3%</p>
-          </div>
-          <div class="card card-grid">
-            <h2 class="sr-only">Facebook</h2>
+          </article>
+          <article class="card card-grid">
+            <h3 class="sr-only">Facebook</h3>
             <p class="grid-left p-head">Likes</p>
             <img
               class="grid-right"
@@ -100,9 +101,9 @@
             />
             <p class="nbr-2 grid-left">52</p>
             <p class="grid-right down">2%</p>
-          </div>
-          <div class="card card-grid">
-            <h2 class="sr-only">Instragram</h2>
+          </article>
+          <article class="card card-grid">
+            <h3 class="sr-only">Instragram</h3>
             <p class="grid-left p-head">Likes</p>
             <img
               class="grid-right"
@@ -111,9 +112,9 @@
             />
             <p class="nbr-2 grid-left">5462</p>
             <p class="grid-right up">2257%</p>
-          </div>
-          <div class="card card-grid">
-            <h2 class="sr-only">Instagram</h2>
+          </article>
+          <article class="card card-grid">
+            <h3 class="sr-only">Instagram</h3>
             <p class="grid-left p-head">Profile Views</p>
             <img
               class="grid-right"
@@ -122,10 +123,10 @@
             />
             <p class="nbr-2 grid-left">52k</p>
             <p class="grid-right up">1375%</p>
-          </div>
+          </article>
 
-          <div class="card card-grid">
-            <h2 class="sr-only">Twitter</h2>
+          <article class="card card-grid">
+            <h3 class="sr-only">Twitter</h3>
             <p class="grid-left p-head">Retweets</p>
             <img
               class="grid-right"
@@ -134,10 +135,10 @@
             />
             <p class="nbr-2 grid-left">117</p>
             <p class="grid-right">303%</p>
-          </div>
+          </article>
 
-          <div class="card card-grid">
-            <h2 class="sr-only">Twitter</h2>
+          <article class="card card-grid">
+            <h3 class="sr-only">Twitter</h3>
             <p class="grid-left p-head">Likes</p>
             <img
               class="grid-right"
@@ -146,10 +147,10 @@
             />
             <p class="nbr-2 grid-left">507</p>
             <p class="grid-right up">553%</p>
-          </div>
+          </article>
 
-          <div class="card card-grid">
-            <h2 class="sr-only">Youtube</h2>
+          <article class="card card-grid">
+            <h3 class="sr-only">Youtube</h3>
             <p class="grid-left p-head">Likes</p>
             <img
               class="grid-right"
@@ -158,10 +159,10 @@
             />
             <p class="nbr-2 grid-left">107</p>
             <p class="grid-right down">19%</p>
-          </div>
+          </article>
 
-          <div class="card card-grid">
-            <h2 class="sr-only">Youtube</h2>
+          <article class="card card-grid">
+            <h3 class="sr-only">Youtube</h3>
             <p class="grid-left p-head">Total Views</p>
             <img
               class="grid-right"
@@ -170,8 +171,8 @@
             />
             <p class="nbr-2 grid-left">1407</p>
             <p class="grid-right down">12%</p>
-          </div>
-        </div>
+          </article>
+        </article>
       </section>
     </main>
     <footer class="attribution">
