Fixed no heading in article tag

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </section>
       <section class="stats">
         <h2 class="h1">Overview - Today</h2>
-        <article class="grid grid-div">
+        <div class="grid grid-div">
           <article class="card card-grid">
             <h3 class="sr-only">Facebook</h3>
             <p class="grid-left p-head">Page Views</p>
@@ -172,7 +172,7 @@
             <p class="nbr-2 grid-left">1407</p>
             <p class="grid-right down">12%</p>
           </article>
-        </article>
+        </div>
       </section>
     </main>
     <footer class="attribution">
